--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "vue-input-highlighter",
-  "private": true,
+  "name": "@leyton-techlab/vue-input-highlighter",
   "version": "0.0.1",
   "main": "./dist/vue-input-highlighter.umd.js",
   "module": "./dist/vue-input-highlighter.es.js",
@@ -25,5 +24,23 @@
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vue-tsc": "^1.8.5"
-  }
+  },
+  "description": "Vue component that let you highlight content inside an input according to regexes",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/leyton-group/vue-input-highlighter.git"
+  },
+  "keywords": [
+    "ux",
+    "vue",
+    "vue3",
+    "input",
+    "highlight",
+    "highlighter"
+  ],
+  "author": "galinor",
+  "bugs": {
+    "url": "https://github.com/leyton-group/vue-input-highlighter/issues"
+  },
+  "homepage": "https://github.com/leyton-group/vue-input-highlighter#readme"
 }
