fix import statements in README + install onlu dist

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     },
     "./style.css": "./dist/style.css"
   },
+  "files": [
+    "dist/"
+  ],
   "type": "module",
   "scripts": {
     "dev": "vite",
